<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="player_a">Player A</string>
    <string name="new_game">new game</string>
    <string name="reset">reset</string>
    <string name="exit">exit</string>
    <string name="player_b">Player B</string>
    <string name="exit1">exit</string>
    <string name="_5_x_5">5 x 5</string>
    <string name="_3_x_3">3 x 3</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="welcome_choose_a_game_board">Welcome, choose a Game Board</string>
</resources>
