<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.example.android.tictactoe.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/playerA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/player_a"
            android:textColor="#ededed"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/playerA"
            android:layout_marginLeft="50dp"
            android:padding="16dp"
            android:text=""
            android:textColor="#ededed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/player_b"
            android:textColor="#ededed"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/playerB"
            android:layout_marginRight="80dp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text=""
            android:textColor="#ededed"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#ededed"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="3">

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="3">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="3">

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ededed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonRes"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textColor="#ededed"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonExi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="butExi"
            android:text="@string/exit"
            android:textColor="#ededed"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
